--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="plate">
             <h3>Le dressage</h3>
             <hr>
-            <p>Le dressage c'est un peu la marque de fabrique du chef, avec la cuisine biensûr. Ses plats sont de vrais petits tableaux de maître. Une belle recherche dans les formes et couleurs très agréable visuellement.</p>
+            <p>Le dressage c'est un peu la marque de fabrique du chef, avec la cuisine bien sûr. Ses plats sont de vrais petits tableaux de maître. Une belle recherche dans les formes et &nbsp;les couleurs très agréable visuellement.</p>
             <span>La note
                 <i class="fa fa-star" aria-hidden="true"></i>
                 <i class="fa fa-star" aria-hidden="true"></i>
