--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- header>h2.titre{city guide - Paris}+hr+h1.titre{Le Bilan}+hr+nav>ul>(li>a[href=#])*4 -->
     <header>
-        <h2 class="titre">city guide - Paris</h2>
+        <h2 class="titre">City guide - Paris</h2>
         <hr>
         <h1 class="titre">Le Bilan</h1>
         <hr>
